// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div>
  <label
    htmlFor="olsyauzqul"
  >
    Enter Your Email
    <input
      id="olsyauzqul"
      name="email"
      onChange={[Function]}
      type="email"
      value=""
    />
  </label>
</div>
`;

exports[`should render correctly: initial state 1`] = `
Object {
  "value": "",
}
`;

exports[`should render correctly: updated state 1`] = `
Object {
  "value": "skmu@hvl.no",
}
`;
